--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <a
           target="_blank"
           class="icp"
-          href="https://beian.miit.gov.cn/#/Integrated/index"
-          >ICP备20200990766-2号</a
+          href=""
+          ></a
         >
         <p class="copyright">
           Copyright© 2023 Mengxing.CC. All Rights Reserved
