--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <div class="tooltip"><img src="public/img/wechat.jpg" /></div>
         </div>
         <div class="item">
-          <a target="_blank" href="https://github.com/DoWake/PersonalPage">
+          <a target="_blank" href="https://github.com/qyl15358528539">
             <img src="public/svg/github.svg" />
           </a>
-          <div class="tooltip">项目地址</div>
+          <div class="tooltip">GitHub</div>
         </div>
       </nav>
       <p class="quote">
