--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         src="https://blog.mengxing.cc/usr/themes/dream/assets/img/face2.png"
         alt="Avatar"
       />
-      <h3 class="nickname">DoWake</h3>
+      <h3 class="nickname">祁彦龙</h3>
       <p class="introduce">心若有所向往，何惧道阻且长。</p>
       <nav>
         <div class="item">
